Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-3852

Wingdings fonts not shown correctly if LayoutDirection set to Qt::RightToLeft

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 4.7.1
    • 4.5.0
    • GUI: Font handling
    • None
    • 4c8571de2d50e1dbfeef38b1e1e09c48a0a27aa4, 7f5cae532d9f1841d15f01064bf97775b9fd8b0d

    Description

      If you set the LayoutDirection to Qt::RightToLeft on a QTextEdit and try to add a clock symbol ( i.e. font: Wingdings Unicode: 187)
      When Qt paints it in the textEdit box it is displayed as a stars (i.e. font: Wingdings Unicode:171)

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            jiang Jiang Jiang
            xcm Martin Petersson (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes