Keep mirrored char handling consistent between some font engines

Mirrored character subsitution should be used in right-to-left text
direction unless the font is a symbol font. This patch will keep
this behavior consistent between FreeType, QPF and S60 font engines.

For Mac font engines, the shaping process is delegated to Core Text
or ATSUI, so we don't do mirrored char handling by ourselves.

Task-number: QTBUG-3852
Reviewed-by: Lars Knoll